--- a/tips/src/main/resources/application-test.properties
+++ b/tips/src/main/resources/application-test.properties
@@ -1,1 +1,3 @@
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-test.xml
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
